# colPaliDemo

./: README.md  db.py  index.py  loguru.yml  model.py  pyproject.toml  retrieve.py  test.py  utils.py
