[project]
name = "colpali"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "colpali-engine>=0.3.11",
    "lancedb>=0.24.0",
    "loguru>=0.7.3",
    "loguru-config>=0.1.0",
    "pandas>=2.3.1",
    "pdf2image>=1.17.0",
    "pip>=25.1.1",
    "protobuf>=6.31.1",
    "pypdf2>=3.0.1",
    "ruff>=0.12.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
]
